secondfile/objects/Credit_Validation__c.object
<CustomObject>
    <fields>
        <fullName>Approved_Amount__c</fullName>
        <label>Approved Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Credit_Category__c</fullName>
        <label>Credit Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Wireline</fullName>
                </value>
                <value>
                    <fullName>Wireless</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Credit_Expiration_Date__c</fullName>
        <label>Credit Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Credit_Check__c</fullName>
        <label>Date of Credit Check</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>On_Hold_Reason__c</fullName>
        <label>On Hold Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Pass_Fail__c</fullName>
        <label>Credit Check Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pass</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rome_Credit_Check_ID__c</fullName>
        <label>Rome Credit Check ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SP_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SP Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Credit Validations</relationshipLabel>
        <relationshipName>Credit_Validations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SP_Lead_Email__c</fullName>
        <label>SP Lead Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SP_Lead_Owner__c</fullName>
        <formula>SP_Lead__r.Owner:User.FirstName  &amp;&quot; &quot;&amp;  SP_Lead__r.Owner:User.LastName</formula>
        <label>SP Lead Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SP_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SP Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Credit Validations</relationshipLabel>
        <relationshipName>Credit_Validations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SP__c</fullName>
        <formula>IF(NOT(ISBLANK(SP_Account__r.Name)),SP_Account__r.Name,
IF(NOT(ISBLANK(SP_Lead__r.Company)),SP_Lead__r.Company, &quot;&quot;) )</formula>
        <label>SP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Id__c</fullName>
        <label>Transaction Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Credit Validation</label>
    <listViews>
        <fullName>Credit_Validation_SP_View</fullName>
        <columns>SP_Lead__c</columns>
        <columns>SP_Account__c</columns>
        <columns>Approved_Amount__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SP_Lead__c</field>
            <operation>notContain</operation>
            <value>test</value>
        </filters>
        <filters>
            <field>Approved_Amount__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Credit Validation: SP View</label>
        <sharedTo>
            <group>BD_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Credit_Validations</fullName>
        <columns>SP_Account__c</columns>
        <columns>SP_Lead__c</columns>
        <columns>Approved_Amount__c</columns>
        <columns>Date_of_Credit_Check__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Approved_Amount__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>notContain</operation>
            <value>demo</value>
        </filters>
        <filters>
            <field>SP_Lead__c</field>
            <operation>notContain</operation>
            <value>test</value>
        </filters>
        <filters>
            <field>SP_Account__c</field>
            <operation>notContain</operation>
            <value>test</value>
        </filters>
        <label>Credit Validations</label>
        <sharedTo>
            <group>BD_Team</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>CV-{000000}</displayFormat>
        <label>Credit Validation ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Validations</pluralLabel>
    <recordTypes>
        <fullName>SP_Lead_Credit_Validation</fullName>
        <active>true</active>
        <description>SP Lead Credit Validation</description>
        <label>SP Lead Credit Validation</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>